--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-hook-popup": "^1.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.3.1",
     "react-scripts": "4.0.1",
     "reactjs-popup": "^2.0.4",
     "redux": "^4.0.5",
